--- a/source/sass/btn.scss
+++ b/source/sass/btn.scss
@@ -1,49 +1,98 @@
+// .btn {
+//   display: flex;
+//   width: 100%;
+//   min-height: 70px;
+//   border-radius: 20px;
+//   padding: 10px 20px;
+//   background-color: transparent;
+//   border: 2px solid whitesmoke;
+//   justify-content: center;
+//   align-items: center;
+
+//   text-transform: uppercase;
+//   color: #ffffff;
+//   font-size: 18px;
+//   line-height: 22px;
+//   font-weight: 600;
+//   text-align: center;
+
+//   transition: 0.5s;
+//   cursor: pointer;
+
+//   &:hover {
+//     transition: 0.5s;
+//     box-shadow: inset 0 25px 25px -10px rgba(23, 30, 36, 0.7);
+//   }
+// }
+
 .btn {
-  display: flex;
-  width: 288px;
-  min-height: 70px;
-  border-radius: 50px;
+  --hue: 190;
+  position: relative;
+  width: 100%;
   padding: 10px 20px;
-  background-color: transparent;
+  border-radius: 15px;
 
-  justify-content: center;
-  align-items: center;
-
-  color: #31400C;
+  text-transform: uppercase;
+  color: #ffffff;
   font-size: 18px;
   line-height: 22px;
   font-weight: 600;
   text-align: center;
 
-  transition: 0.5s;
+  background-color: hsl(var(--hue), 100%, 41%);
+  border: 2px solid hsl(var(--hue), 100%, 41%);
+  outline: transparent;
+  overflow: hidden;
   cursor: pointer;
+  user-select: none;
+  white-space: nowrap;
+  transition: 0.25s;
 
-
-  @media (max-width: 560px) {
-    min-height: 50px;
-    padding: 5px 10px;
+  &:hover {
+    background: hsl(var(--hue), 100%, 31%);
   }
 
-  &--red {
-    min-height: 56px;
-    background-color: #D70202;
-    border: none;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 17px;
-    color: #FFFFFF;
+  &--primary {
+    --hue: 187;
+  }
+
+  &--ghost {
+    color: hsl(var(--hue), 100%, 41%);
+    background-color: transparent;
+    border-color: hsl(var(--hue), 100%, 41%);
 
     &:hover {
-      transition: 0.5s;
-      box-shadow: 0px 0px 28px -5px #960202b1;
+      color: white;
     }
+  }
 
-    @media (max-width: 799px) {
-      width: 50%;
-    }
+  &--shine {
+    color: white;
 
-    @media (max-width: 638px) {
+    &::before {
+      position: absolute;
+      content: "";
+      top: 0;
+      left: 0;
       width: 100%;
+      height: 100%;
+      background: linear-gradient(
+        120deg,
+        transparent,
+        hsla(var(--hue), 100%, 41%, 0.5),
+        transparent
+      );
+      transform: translateX(-100%);
+      transition: 0.6s;
+    }
+
+    &:hover {
+      background: transparent;
+      box-shadow: 0 0 20px 0px hsla(var(--hue), 100%, 41%, 0.5);
+    }
+
+    &:hover::before {
+      transform: translateX(100%);
     }
   }
 }
