--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -7,7 +7,7 @@
 .main__link {
   position: fixed;
   display: flex;
-  top: calc(90% - 50px);
+  top: calc(90% - 30px);
   right: 35px;
   z-index: 10000;
 
@@ -27,7 +27,12 @@
     right: 20px;
     font-weight: 500;
     font-size: 14px;
-    text-transform: uppercase;
+    transform: scale(0.5);
+  }
+
+  @media (max-width: 520px) {
+    top: calc(90% - 10px);
+    transform: scale(0.1);
   }
 
   &:hover {
