--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,5 +14,7 @@
 @import "blocks/compound";
 @import "blocks/reviews";
 @import "blocks/intro";
-
+@import "blocks/order";
+@import "blocks/product";
+@import "blocks/countdown";
 
